--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "jvmazagao",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
-    "gulp-nodemon": "^2.5.0"
+    "gulp-nodemon": "^2.5.0",
+    "mongoose": "^5.9.26"
   }
 }
