--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch --coverage"
   },
   "author": "jvmazagao",
   "license": "ISC",
@@ -13,7 +13,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
+    "gulp-mocha": "^7.0.2",
     "gulp-nodemon": "^2.5.0",
-    "mongoose": "^5.9.26"
+    "jest": "^26.1.0",
+    "mongoose": "^5.9.26",
+    "should": "^13.2.3",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   }
 }
